--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=postgres;Port=5432;Database=net9playground;Username=postgres;Password=yourpassword"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
