--- a/WebApplication1/docker-compose.yml
+++ b/WebApplication1/docker-compose.yml
@@ -10,14 +10,17 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=net9playground;Username=postgres;Password=yourpassword
+    volumes:
+      - ./WebApplication1:/src
+
   postgres:
-    image: postgres:alpine
+    image: postgres:17-alpine
+    restart: unless-stopped
     environment:
       POSTGRES_DB: net9playground
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: yourpassword
-    ports:
-      - "5432:5432"
+
     volumes:
       - pgdata:/var/lib/postgresql/data
 
