--- a/WebApplication1/Dockerfile
+++ b/WebApplication1/Dockerfile
@@ -1,15 +1,14 @@
 # Build stage
-FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine3.18 AS build
 WORKDIR /src
 COPY ["WebApplication1.csproj", "./"]
 RUN dotnet restore "./WebApplication1.csproj"
 COPY . .
-RUN dotnet publish "WebApplication1.csproj" -c Release -o /app/publish
+RUN dotnet publish "WebApplication1.csproj" -c Release -o /app/publish --no-restore
 
 # Runtime stage
-FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine AS runtime
+FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine3.18 AS runtime
 WORKDIR /app
 COPY --from=build /app/publish .
-# Expose the port specified in launchSettings.json (e.g., 80)
 EXPOSE 80
 ENTRYPOINT ["dotnet", "WebApplication1.dll"]
