docker & makefile improvements

--- a/WebApplication1/Dockerfile
+++ b/WebApplication1/Dockerfile
@@ -1,5 +1,5 @@
 # Build stage
-FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine3.18 AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS build
 WORKDIR /src
 COPY ["WebApplication1.csproj", "./"]
 RUN dotnet restore "./WebApplication1.csproj"
@@ -7,7 +7,7 @@ COPY . .
 RUN dotnet publish "WebApplication1.csproj" -c Release -o /app/publish --no-restore
 
 # Runtime stage
-FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine3.18 AS runtime
+FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS runtime
 WORKDIR /app
 COPY --from=build /app/publish .
 EXPOSE 80
