--- a/WebApplication1/docker-compose.yml
+++ b/WebApplication1/docker-compose.yml
@@ -1,10 +1,11 @@
 services:
   web:
     build:
-      context: ./WebApplication1
+      context: .
       dockerfile: Dockerfile
     ports:
-      - "5000:80"
+      - "5008:8080"
+      - "7024:443"
     depends_on:
       - postgres
     environment:
