--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   web:
     build:
-      context: .
+      context: ./WebApplication1
       dockerfile: Dockerfile
     ports:
       - "5008:8080"
