--- a/WebApplication1/Dockerfile
+++ b/WebApplication1/Dockerfile
@@ -1,21 +1,27 @@
-# Build stage
-FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS build
-WORKDIR /src
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build-env
+
+WORKDIR /app
 
 COPY ["WebApplication1.csproj", "./"]
-
-# Copy everything else *before* restoring packages
-COPY . .
-
-# Copy NuGet.Config (Now it won't be overwritten)
 COPY ["NuGet.Config", "./"]
 
 RUN dotnet restore "WebApplication1.csproj"
-RUN dotnet publish "WebApplication1.csproj" -c Release -o /app/publish --no-restore
 
-# Runtime stage
-FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine AS runtime
+COPY . ./
+
+RUN dotnet publish "WebApplication1.csproj" -c Release -o out
+
+RUN dotnet tool install --global dotnet-ef --version 9.0.2
+
+# Build runtime image
+FROM mcr.microsoft.com/dotnet/aspnet:9.0
+
 WORKDIR /app
-COPY --from=build /app/publish .
-EXPOSE 8080
-ENTRYPOINT ["dotnet", "WebApplication1.dll"]
+COPY --from=build-env /app/out .
+
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+
+ENV ASPNETCORE_URLS=http://+:8080
+
+ENTRYPOINT ["/app/entrypoint.sh"]
