--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -23,6 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Areas/Admin/ViewModels/Tags/" />
       <Folder Include="ViewModels/" />
     </ItemGroup>
 
