--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,18 @@ services:
     build:
       context: .
       dockerfile: WebApplication1/Dockerfile
+    env_file:
+      - ./WebApplication1/.dev.env
     ports:
-      - "5008:8080"
+      - "5008:80"
       - "7024:443"
     depends_on:
       - postgres
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=net9playground;Username=postgres;Password=yourpassword
+    volumes:
+      - ${HOME}/.aspnet/https:/https:ro
+      - dataprotection-keys:/root/.aspnet/DataProtection-Keys
 
   postgres:
     image: postgres:17-alpine
@@ -26,3 +30,5 @@ services:
 
 volumes:
   pgdata:
+  dataprotection-keys:
+    driver: local
