--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="9.0.9" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.9" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.9" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.9" />
       <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="4.14.0" PrivateAssets="all" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.9" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
@@ -27,6 +28,7 @@
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="9.0.9" />
+      <PackageReference Include="Microsoft.Testing.Platform" Version="1.9.0" />
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
       <PackageReference Include="Serilog" Version="4.3.0" />
