--- a/tests/WebApp.UnitTests/WebApp.UnitTests.csproj
+++ b/tests/WebApp.UnitTests/WebApp.UnitTests.csproj
@@ -15,7 +15,6 @@
     <PackageReference Include="Solid.Testing.AspNetCore.Extensions.XUnit" Version="4.0.2" />
 
     <!-- xUnit Framework and Runner for IDE integration -->
-    <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -30,6 +29,7 @@
     <!-- Mocking and Assertion Libraries -->
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Shouldly" Version="4.3.0" />
+    <PackageReference Include="xunit.v3" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
