--- a/src/WebApp/Dockerfile
+++ b/src/WebApp/Dockerfile
@@ -2,8 +2,6 @@ FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 
 WORKDIR /src
 
-RUN dotnet tool install --global dotnet-ef --version 10.0.0 || dotnet tool update --global dotnet-ef --version 10.0.0 
-
 # Copy project files and restore as a distinct layer
 COPY ["src/WebApp/WebApp.csproj", "WebApp/"]
 COPY ["NuGet.Config", "."]
@@ -17,7 +15,7 @@ WORKDIR /src/WebApp
 RUN dotnet publish "WebApp.csproj" -c Release -o /app/publish
 
 # Runtime stage
-FROM mcr.microsoft.com/dotnet/aspnet:10.0-alpine AS runtime
+FROM mcr.microsoft.com/dotnet/sdk:10.0-alpine AS runtime
 
 WORKDIR /app
 
